--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-google-button": "^0.7.2",
     "react-icons": "^4.6.0",
     "react-router-dom": "^6.4.3",
+    "react-toastify": "^9.1.1",
     "swiper": "^8.4.5",
     "yup": "^0.32.11"
   },
